# templeRunIMAC

./: .gitignore  README.md  main.cpp
templeRun/: CMakeLists.txt
templeRun/glimac/: Makefile  cmake_install.cmake
templeRun/glimac/src/: FreeflyCamera.cpp  Image.cpp  Sphere.cpp  TrackballCamera.cpp  cases.cpp  common.cpp  jeu.cpp  lumiere.cpp  mesh.cpp  objets.cpp  personnage.cpp  texture.cpp
templeRun/jeu/: CMakeLists.txt  Makefile  SDLtemplate.cpp  backpack.cpp  cmake_install.cmake  fouilli_tests_cam_lumiere.cpp  main.cpp  meilleuresPartiesSauvegardees.txt  meilleursScores.txt  moteurJeu.cpp  partiesSauvegardees.txt  savespartie1.txt  tableauDeScore.cpp  tableauDeScore_ancienneVersion.cpp  testFenetresMenus.cpp  testStruct.cpp
templeRun/jeu/assets/: CMakeLists.txt
templeRun/jeu/include/: Cases.hpp  FreeflyCamera.hpp  Jeu.hpp  Objets.hpp  Personnage.hpp  Terrain.hpp  camera.hpp  cases.hpp  drawTerrain.hpp  etatDuJeu.hpp  fenetresTextuelles.hpp  freeflyCamera.hpp  jeu.hpp  lumiere.hpp  mesh.hpp  model.cpp  model.hpp  moteurJeu.hpp  objets.hpp  rendering.hpp  renderingTerrain.hpp  tableauDeScore.hpp  texture.hpp  trackballCamera.hpp  variablesGlobales.hpp
templeRun/jeu/saves/: a.txt  babimac.txt  best.txt  bob.txt  firstsave.txt  fourth.txt  hffj.txt  intersection.txt  j.txt  jeu.txt  k.txt  longuepartie.txt  maman.txt  meilleurePartie.txt  meilleurepartie.txt  no.txt  p.txt  papa.txt  partie1.txt  partie3.txt  partieForte.txt  partieFun.txt  partieLa.txt  partiePasFolle.txt  partiePropre.txt  remplace.txt  seventh.txt  test.txt  thirdsave.txt  tzstcharg.txt  ui.txt  winner.txt  wowfort.txt
templeRun/jeu/savesJeu/: meilleursScores.txt  partiesSauvegardees.txt
templeRun/jeu/shaders/: lumieresvec.fs.glsl  objets.fs.glsl  tex2D.vs.glsl
templeRun/jeu/src/: Cases.cpp  FreeflyCamera.cpp  Jeu.cpp  Objets.cpp  Personnage.cpp  Terrain.cpp  TrackballCamera.cpp  cases.cpp  drawTerrain.cpp  etatDuJeu.cpp  fenetresTextuelles.cpp  freeflyCamera.cpp  jeu.cpp  lumiere.cpp  mesh.cpp  (+9 more)
(+74 files in other folders)
